--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
+    "sass": "^1.32.12",
+    "sass-loader": "^10.1.1",
     "vue-cli-plugin-moment": "~0.1.1"
   }
 }
