--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "moment": "^2.29.1",
+    "mongoose": "^5.12.8",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
