--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.12.8",
     "vue": "^3.0.11",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
