--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -28,13 +29,22 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/test-utils": "^2.0.0-rc.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "sass": "^1.32.12",
     "sass-loader": "^10.1.1",
-    "vue-cli-plugin-moment": "~0.1.1"
+    "vue-cli-plugin-moment": "~0.1.1",
+    "vue-jest": "^5.0.0-alpha.9"
+  },
+  "jest": {
+    "transform": {
+      "^[^.]+.vue$": "vue-jest",
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
