--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "jest"
+    "test": "jest",
+    "start": "vue-cli-service serve & nodemon backend/server.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -38,6 +39,7 @@
     "prettier": "^2.2.1",
     "sass": "^1.32.12",
     "sass-loader": "^10.1.1",
+    "typescript": "^4.2.4",
     "vue-cli-plugin-moment": "~0.1.1",
     "vue-jest": "^5.0.0-alpha.9"
   },
