--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
     "mongoose": "^5.12.8",
     "vue": "^3.0.11",
     "vue-router": "^4.0.0-0",
@@ -25,6 +23,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.169",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -45,14 +44,26 @@
     "prettier": "^2.2.1",
     "sass": "^1.32.12",
     "sass-loader": "^10.1.1",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4",
     "vue-cli-plugin-moment": "~0.1.1",
     "vue-jest": "^5.0.0-alpha.9"
   },
   "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "ts",
+      "json",
+      "vue"
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
     "transform": {
-      "^[^.]+.vue$": "vue-jest",
-      "^.+\\.js$": "babel-jest"
-    }
+      ".*\\.(vue)$": "vue-jest",
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "testURL": "http://localhost/"
   }
 }
