Change environment file

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_PROD_URI=mongodb+srv://kehvinbehvin:@cluster0.0lnwu.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_PROD_URI=mongodb+srv://lucasng:NEq3B960kb19neWe@cluster0.0lnwu.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
